tests/hep3_flow_narrow_bad_null_branch_deref.hop
// Verifies HEP 3 flow narrow bad null branch dereference.
import "hophop/feature/optional"

// Inside if x == null { ... }, x is null-typed — cannot dereference.
pub fn bad(x ?*i32) i32 {
	if x == null {
		return *x
	}
	return 0
}
